--- a/base/public/index.html
+++ b/base/public/index.html
@@ -5,11 +5,11 @@
   <title>Title</title>
 </head>
 <body>
- <p>this is a page!</p>
- <form action="http://127.0.0.1:8081/process_post" method="POST">
-   First Name: <input type="text" name="first_name">  <br>
-   Last Name: <input type="text" name="last_name">
-   <input type="submit" value="Submit">
- </form>
+  <p>this is a page!</p>
+  <form action="http://127.0.0.1:8081/post" method="POST">
+    First Name: <input type="text" name="first_name"> <br>
+    Last Name: <input type="text" name="last_name">
+    <input type="submit" value="Submit">
+  </form>
 </body>
 </html>
